# esp32_Drone

./: .gitignore  .gitmodules  CMakeLists.txt  _ _ _ .code-search  _clang-format  buildscript_versioning.py  general_TODOs.txt  platformio.ini  sdkconfig  sdkconfig.esp32dev  sdkconfig.old
.devcontainer/: Dockerfile
Common/: CMakeLists.txt  Data_type.h  GPSCalc.c  GPSCalc.h  common_Config.h  stabilizer_types.h
Controller/: Common  platformio.ini
STM32_IO_Expander/: .cproject  .mxproject  .project  STM32_IO_Expander Debug (1).launch  STM32_IO_Expander Debug.launch  STM32_IO_Expander.ioc
Submodules/: CMakeLists.txt
include/: STM32_interconnect.h  adc_esp32.h  cf_math.h  cfassert.h  com_helper.h  commander.h  config.h  controller.h  controller_indi.h  controller_mellinger.h  controller_pid.h  crtp.h  crtp_commander.h  crtp_commander_high_level.h  crtp_localization_service.h  debug_cf.h  estimator.h  estimator_complementary.h  estimator_kalman.h  i2c_drv.h  i2cdev.h  imu_types.h  kalman_core.h  led.h  motors.h  outlierFilter.h  param.h  platform.h  pm_esplane.h  position_controller.h  position_estimator.h  power_distribution.h  queuemonitor.h  radiolink.h  sensors.h  servo_controll.h  sitaw.h  stm32_legacy.h  syslink.h  wifi_esp32.h
main/: CMakeLists.txt  comm.c  crtp.c  crtp_commander.c  crtp_commander_generic.c  crtp_commander_high_level.c  crtp_localization_service.c  idf_component.yml  index.html  info.c  ledseq.c  log.c  main.c  main.cpp  power_distribution_stock.c  radiolink.c  radiolink.cpp  range.c  sensors.c  sensors_mpu6050_hm5883L_ms5611.c  stabilizer.c  (+3 more)
(+232 files in other folders)
